--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <input type="week">
         </div>
         <div>
-            <p>Поле для поиска</p>
+            <p>Поле для поиска!!!</p>
             <input type="search">
         </div>
         <div>
